Fix syntax errors in the Nginx config file.

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,8 +1,7 @@
-user nobody;
+user nobody nogroup;
 worker_processes auto;
 pid run/nginx.pid;
 
-access_log logs/access.log;
 error_log logs/error.log info; # Enable for debugging: debug;
 
 load_module modules/ngx_http_acme_module.so;
@@ -35,6 +34,8 @@ http {
         state_path  acme/letsencrypt;
         accept_terms_of_service;
     }
+
+    access_log logs/access.log;
 
     include mime.types;
     include vhost/*.conf;
